# MeERCAT

./: LICENSE  README.md  pyproject.toml
examples/: run_full_analysis.py
input_data/: MC00407_metabolites.csv  MC00409_RNA.csv  MC00409_metabolites.csv  experiment_metadata.csv  rna_metadata.csv
output_results/: metabolite_data_cleaned_indexed.csv  metabolite_features_originalID.csv  metabolite_metadata_from_cleaning.csv  metabolite_metadata_originalID.csv
src/: load_data.py  preprocess.py
src/MeERCAT/: __init__.py  config.py  load_data.py  nmf.py  postprocess.py  preprocess.py  utils.py  visualize.py
src/MeERCAT.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
vignettes/: run_full_analysis.py
